# LoST

./: .gitignore  CMakeLists.txt  LICENSE  README.md  icon.png.import  install-libs.ps1  install-sdl2-devel.ps1  player.tscn  project.godot  stage.tscn  windows-setup.ps1
LGE/: CMakeLists.txt
LGE/include/: LGE.hpp  LGE_engine.hpp  LGE_sprite.hpp  LGE_timer.hpp  LGE_util.hpp
LGE/src/: LGE_engine.cpp  LGE_sprite.cpp  LGE_timer.cpp  sprite.cpp
LoST/: CMakeLists.txt  main.cpp
LoST/include/: LoST.hpp  LoST_Assets.hpp  LoST_Game.h  LoST_Player.hpp  LoST_assets.hpp  LoST_enemies.hpp  LoST_game.hpp  LoST_player.hpp  game.hpp
LoST/src/: LoST_game.cpp  game.cpp
cmake/: FindSDL2_ttf.cmake
include/: LoST.hpp  LoST_Assets.hpp  LoST_Enemies.hpp  LoST_Player.hpp  game.hpp  sprite.hpp  timer.hpp
src/: LoST_Player.cpp  game.cpp  main.cpp  sprite.cpp  timer.cpp
